--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
       <input type="text" id="edit-name" placeholder="Skill Name">
       <textarea id="edit-desc" placeholder="Skill Description"></textarea>
       <input type="number" id="edit-price" placeholder="Price (€)">
-      <button class="loginButton" id="saveSkill()">Save</button>
+      <button class="loginButton" id="save-skill">Save</button>
     </div>
   </div>
 
